symbol right grading

--- a/frontend/src/Student/Class/Class.css
+++ b/frontend/src/Student/Class/Class.css
@@ -4,9 +4,9 @@
   margin: 10px;
 }
 
-#class {
+#class-student {
   display: inline-block;
-  margin-top: -111px;
+  /* margin-top: -111px; */
   width: 67px;
 }
 
