--- a/frontend/src/Teacher/Assignment/Work/Work.css
+++ b/frontend/src/Teacher/Assignment/Work/Work.css
@@ -10,7 +10,7 @@
 
 #work-img {
   margin: 0px;
-  margin-top: 5px;
+  margin-top: 0px;
 }
 
 canvas {
@@ -21,7 +21,7 @@ canvas {
 }
 
 .layer {
-  /* padding: 0px 100px 0px 100px; */
+  width: 100%;
 }
 
 #img-layer {
@@ -36,7 +36,7 @@ canvas {
 
 #drawing-layer {
   position: absolute;
-  z-index: 1;
+  z-index: 3;
 }
 
 .container {
@@ -67,4 +67,13 @@ canvas {
 
 .grading-tool {
   display: block;
+}
+
+#objecttt {
+  z-index: 100;
+}
+
+.object-symbol-container {
+    position: absolute;
+    z-index: -1;
 }
