add comment function

--- a/frontend/src/Teacher/Assignment/Work/Work.css
+++ b/frontend/src/Teacher/Assignment/Work/Work.css
@@ -75,3 +75,8 @@ canvas {
     position: absolute;
     z-index: -1;
 }
+
+.object-comment-container {
+    position: absolute;
+    z-index: -1;
+}
